[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "momentum"
version = "0.1.0"
description = "A minimal, one-task-at-a-time CLI tracker."
authors = [
    { name = "Daniel Judge", email = "dwjref+momentum@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
momentum = "momentum.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/momentum"] 